--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "hello-world-package-test",
-  "version": "1.0.0",
+  "name": "hello-world-package-test-deployment",
+  "version": "1.0.1",
   "description": "Test package for npm",
   "main": "index.js",
+  "homepage": "https://github.com/iwankruger/hello-world-package-test-deployment",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iwankruger/hello-world-package-test-deployment"
+  },
+  "bugs": {
+    "url": "https://github.com/iwankruger/hello-world-package-test-deployment/issues",
+    "email": "test@test.com"
+  },
   "scripts": {
     "build": "rm -r build && tsc",
     "watch-ts": "tsc -w",
