--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "hello-world-package-test-deployment",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Test package for npm",
-  "main": "index.js",
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "files": ["build"],
+  "types": "build/index.d.ts",
   "homepage": "https://github.com/iwankruger/hello-world-package-test-deployment",
   "repository": {
     "type": "git",
@@ -13,13 +16,17 @@
     "email": "test@test.com"
   },
   "scripts": {
-    "build": "rm -r build && tsc",
+    "build_old": "rm -r build && tsc",
     "watch-ts": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c",
+    "watch": "rollup -cw"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "rollup": "^2.36.1",
+    "rollup-plugin-typescript2": "^0.29.0",
     "typescript": "^4.1.3"
   }
 }
